# IAgo

./: .gitignore  Cargo.toml  comp.txt
.github/workflows/: build.yml
example/: Main.gd  Main.tscn  miiodel.tscn  project.godot  tokenizer.gdextension  xlstm_large_chat.gd
src/: lib.rs  main.rs  xlstm_large_node.rs
src/model/: Cargo.toml  lib.rs
src/model/blocks/: mod.rs
src/model/blocks/minrnn/: MINGRU_CHANGES.md  mingru.rs  minlstm.rs  mod.rs
src/model/blocks/mlstm/: cell.rs  layer.rs
src/model/blocks/slstm/: layer.rs
src/model/blocks/xlstm_large/: backends.rs  components.rs  model.rs
src/tokenizer/: bpe.rs  common.rs  mod.rs
src/xorIA/: comp.txt  large_chat.rs  large_chat_cuda.rs  mingruchat.rs  mingruchat_cuda.rs  mingruchat_wgpu.rs  minlstmchat.rs  msltmchat (cuda).rs  msltmchat (webgpu).rs  msltmchat.rs  slstmchat.rs
