[package]
name = "IAgo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
godot = { version = "0.4.2", features = ["api-4-2"] }
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
bincode = "1.3.3"



[profile.release]
opt-level = 3
lto = true
codegen-units = 1
#panic = "abort"
strip = false

