[package]
name = "IAgo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
godot = { version = "0.4.2", features = ["api-4-4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3.3"
burn = { version = "0.20.1", default-features = false, features = ["ndarray", "autodiff", "train"] }
burn-autodiff = { version = "0.20.1", default-features = false }
burn-ndarray = { version = "0.20.1", default-features = false }
tokenizers = "0.20"
rand = "0.10"
num-traits = "0.2"
derive_more = "0.99"
xlstm = { path = "src/model" }

[target.'cfg(any(windows, target_os = "linux", target_os = "macos"))'.dependencies]
burn-cuda = "0.20.1"
burn-wgpu = "0.20.1"



# se lleva mal con el abort en las libs

