[package]
name = "xlstm"
version = "0.1.0"
edition = "2021"

[lib]
path = "lib.rs"

[dependencies]
burn = { version = "0.20.1", default-features = false, features = ["ndarray", "autodiff", "train"] }
burn-autodiff = { version = "0.20.1", default-features = false }
burn-ndarray = { version = "0.20.1", default-features = false }
tokenizers = "0.20"
rand = "0.9"
num-traits = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target.'cfg(any(windows, target_os = "linux", target_os = "macos"))'.dependencies]
burn-cuda = "0.20.1"
burn-wgpu = "0.20.1"
